# final-project-windfusion

./: Collaboration.md  README.md  environment.yaml  pyproject.toml
examples/: code_week8.py  example_site_summary.py  main.py  run_persistence.py  run_wind_turbine.py
src/finalproject/: __init__.py  evaluation.py  feature_engineer.py  ml_models.py  path_utils.py  persistence_model.py  plotting_predicted_vs_real.py  site_summary.py  split_data.py  wind_turbine.py  wind_turbine_class.py
tests/: test_evaluate_model.py  test_feature_engineer.py  test_feedforward_model.py  test_file_path.py  test_gradient_model.py  test_persistence.py  test_persistence_model.py  test_plot_feature_importance.py  test_power_prediction_plotting.py  test_random_forest_model.py  test_save_fig.py  test_site_summary.py  test_split_data.py  test_svr_model.py  test_timeseries_plotting.py  test_week8.py
